--- a/front-end/package.json
+++ b/front-end/package.json
@@ -19,6 +19,7 @@
     "vue-carousel": "^0.18.0",
     "vue-clamp": "^0.4.1",
     "vue-click-outside": "^1.1.0",
+    "vue-google-oauth2": "^1.5.8",
     "vue-js-modal": "^2.0.1",
     "vue-line-clamp": "^1.3.2",
     "vue-material-design-icons": "^5.1.2",
